--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,10 @@ body {
 }
 .nav {
   margin: 0px 0px 5px 0px;
-  justify-content: space-between;
+  justify-content: space-around;
   display: flex;
   align-items: center;
-  flex-wrap: wrap;
+  flex-wrap: no-wrap;
   border-bottom: solid 1px white;
   background-color: white;
 }
@@ -25,11 +25,12 @@ body {
 .nav-buttons {
   display: flex;
   width: 50%;
-  margin: 0px 10% 0px 10px;
   padding: 0px;
-  justify-content: space-around;
+  justify-content: space-between;
   font-family: sans-serif;
   font-size: .5rem;
+  margin-left: 100px;
+  margin-right: 400px;
 }
 .nav-buttons > * {
   padding: 2px;
@@ -37,11 +38,21 @@ body {
 }
 .nav-soical{
   display: flex;
-  width: 25%;
+  width: 40%;
   padding: 0px;
   justify-content: space-around;
   align-items: center;
 }
+
+.nav.fab, .nav.fas  {
+  color: grey;
+  height: 1px;
+}
+
+.nav.fas {
+  margin-left: 50px;
+}
+
 
 .main{
   display: flex;
@@ -51,8 +62,6 @@ body {
 /* will need a different solution to this */
 .main-left img {
   width: 100%;
-  margin-top: -25px;
-  margin-left: -10px;
 }
 
 .main-left {
@@ -63,10 +72,6 @@ body {
   width: 50%;
   margin: 25px;
   padding: 25px;
-  list-style: none;
-  border: solid 1px #EBEBEB;
-  background-color: white;
-  border-radius: 5px;
 }
 
 .main-left > * {
@@ -74,9 +79,17 @@ body {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  margin-bottom: 200px;
+  background-color: white;
+  list-style: none;
+  margin-bottom: 25px;
+  border: solid 1px #EBEBEB;
+  background-color: white;
+  border-radius: 5px;
 }
 
+.main-left-1 p {
+  padding: 10px;
+}
 .side {
   display: flex;
   flex-direction: column;
@@ -89,4 +102,20 @@ body {
   border: solid 1px #EBEBEB;
   background-color: white;
   border-radius: 5px;
+}
+.main-footer {
+  border-top: solid 1px grey;
+  display: flex;
+  justify-content: space-between;
+  padding: 0px;
+  width: 100%;
+}
+
+.main-soical {
+  list-style: none;
+  width: 25%;
+  padding: 0px;
+  align-self: center;
+  display: flex;
+  justify-content: space-around;
 }
