--- a/styles.css
+++ b/styles.css
@@ -8,60 +8,60 @@ body {
 .wrapper{
   position: relative;
 }
-.nav {
-  margin: 0px 0px 5px 0px;
-  justify-content: space-around;
+.nav-wrapper {
   display: flex;
   align-items: center;
-  flex-wrap: no-wrap;
-  border-bottom: solid 1px white;
+  height: 60px;
+  border-bottom: solid 1px #E9E9E9;
   background-color: white;
 }
 
-.nav > * {
+.nav-wrapper > * {
   list-style: none;
 }
 
 .nav-buttons {
   display: flex;
-  width: 50%;
-  padding: 0px;
-  justify-content: space-between;
-  font-family: sans-serif;
-  font-size: .5rem;
-  margin-left: 100px;
-  margin-right: 400px;
+  font-family: 'Lato';
+  color: #757575;
+  font-size: .7rem;
+  margin-right: auto;
+  margin-left: 7%;
+  /* use rems not % */
+  letter-spacing: 1px;
+  /* use letter spacing*/
 }
+
 .nav-buttons > * {
-  padding: 2px;
+  padding: 0px 10px 2px 10px;
   font-weight: bold;
+  padding-left: 10px;
+
 }
 .nav-soical{
   display: flex;
-  width: 40%;
-  padding: 0px;
-  justify-content: space-around;
-  align-items: center;
+  margin-right: 125px;
 }
 
-.nav.fab, .nav.fas  {
+.nav-soical li{
+  padding-left: 10px;
+  font-size: .6rem;
+}
+
+.nav-fab, .nav-fas  {
   color: grey;
-  height: 1px;
 }
-
-.nav.fas {
-  margin-left: 50px;
-}
-
 
 .main{
   display: flex;
   justify-content: center;
   align-content: center;
+  margin-top: 50px;
 }
-/* will need a different solution to this */
+
 .main-left img {
   width: 100%;
+  height: 470px;
 }
 
 .main-left {
@@ -69,9 +69,11 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 50%;
-  margin: 25px;
-  padding: 25px;
+  margin: 0px;
+  width: 750px;
+  padding: 0px 30px 0px 25px;
+       /* top right bottom left */
+  margin-left: -25px;
 }
 
 .main-left > * {
@@ -87,22 +89,6 @@ body {
   border-radius: 5px;
 }
 
-.main-left-1 p {
-  padding: 10px;
-}
-.side {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 20%;
-  margin-top: 25px;
-  padding: 25px;
-  list-style: none;
-  border: solid 1px #EBEBEB;
-  background-color: white;
-  border-radius: 5px;
-}
 .main-footer {
   border-top: solid 1px grey;
   display: flex;
@@ -118,4 +104,87 @@ body {
   align-self: center;
   display: flex;
   justify-content: space-around;
+}
+
+.side {
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  position: relative;
+  list-style: none;
+  border: solid 1px #EBEBEB;
+  background-color: white;
+  border-radius: 5px;
+}
+.side > * {
+  list-style: none;
+}
+
+.side-top{
+  width: 100%;
+  height: 190px;
+}
+
+.side-profile{
+  position: absolute;
+  top: 100px;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 155px;
+  border: solid 5px white;
+  border-radius: 500px;
+}
+
+.side-soical li {
+  display: inline-block;
+  border: solid 1px #EBEBEB;
+  border-radius: 500px;
+  width: 10px;
+  height: 10px;
+}
+
+.side-soical li > i {
+  font-size: 1px;
+}
+
+
+h3 {
+  font-family: 'Oswald';
+  font-weight: 400;
+  line-height: 20px;
+  font-size: 1.5rem;
+  margin-top: 6px;
+  letter-spacing: 1px;
+}
+/* put this in a p page */
+.p-head {
+  margin-top: 48px;
+  line-height: 12px;
+  font-family: 'Lato';
+  letter-spacing: 1px;
+  font-weight: bold;
+  font-size: .7rem;
+  color: #D88462;
+}
+
+.main-left article {
+  font-family: 'Lato';
+  padding: 5px 33px 35px 39px;
+  line-height: 25px;
+  color: blue;
+}
+
+.main-left button {
+  font-family: 'Lato';
+  font-weight: bold;
+  font-size: .8rem;
+  padding: 10px 20px 10px 20px;
+  color: #D88462;
+  background-color: white;
+  text-transform: uppercase;
+  border: solid 1px #D88462;
+}
+
+.main-footer {
+  padding: 10px;
 }
