--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,19 @@
 body {
   box-sizing: border-box;
   background-color: #F4F4F4;
+  /* font-size: 10px; */
 }
-.fab, .fas{
+
+/* 1 rem is 16px
+html make the font size 10px */
+.fab, .fas {
   color: grey;
 }
-.wrapper{
+
+.wrapper {
   position: relative;
 }
+
 .nav-wrapper {
   display: flex;
   align-items: center;
@@ -16,7 +22,7 @@ body {
   background-color: white;
 }
 
-.nav-wrapper > * {
+.nav-wrapper>* {
   list-style: none;
 }
 
@@ -24,44 +30,52 @@ body {
   display: flex;
   font-family: 'Lato';
   color: #757575;
-  font-size: .7rem;
-  margin-right: auto;
-  margin-left: 7%;
-  /* use rems not % */
-  letter-spacing: 1px;
+  font-size: 12px;
+  padding-left: 38px;
+  margin-top: 15px;
+  margin-left: 90px;
+  letter-spacing: .5px;
   /* use letter spacing*/
 }
 
-.nav-buttons > * {
-  padding: 0px 10px 2px 10px;
+.nav-buttons>* {
+  padding-left: 22.5px;
+  padding-bottom: 0px;
   font-weight: bold;
-  padding-left: 10px;
-
+  color: blue;
 }
-.nav-soical{
+
+.nav-soical {
   display: flex;
-  margin-right: 125px;
+  margin-right: 150px;
+  margin-left: auto;
 }
 
-.nav-soical li{
+.nav-soical li {
+  padding-left: 13.5px;
+  font-size: 13px;
+}
+
+.fa-search {
   padding-left: 10px;
-  font-size: .6rem;
 }
 
-.nav-fab, .nav-fas  {
+.nav-fab, .nav-fas {
   color: grey;
 }
 
-.main{
+/* main starts here */
+.main {
   display: flex;
   justify-content: center;
   align-content: center;
   margin-top: 50px;
 }
 
+/* main left */
 .main-left img {
   width: 100%;
-  height: 470px;
+  height: 472px;
 }
 
 .main-left {
@@ -70,121 +84,235 @@ body {
   justify-content: center;
   align-items: center;
   margin: 0px;
-  width: 750px;
+  width: 752.5px;
   padding: 0px 30px 0px 25px;
-       /* top right bottom left */
+  /* top right bottom left */
   margin-left: -25px;
 }
 
-.main-left > * {
+.main-left>* {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   background-color: white;
   list-style: none;
-  margin-bottom: 25px;
+  margin-bottom: 48px;
   border: solid 1px #EBEBEB;
   background-color: white;
   border-radius: 5px;
+}
+
+h3 {
+  font-family: 'Oswald', 'Helvetica', sans-serif;
+  font-weight: 500;
+  font-size: 24px;
+  margin-top: 3px;
+  letter-spacing: .5px;
+  color: blue;
+}
+
+/* put this in a p page */
+.p-head {
+  margin-top: 46px;
+  font-family: 'Lato';
+  letter-spacing: 1px;
+  font-weight: 700;
+  /* font-size: .7rem; 11px */
+  font-size: 11px;
+  color: #D88462;
+  color: blue;
+}
+
+.main-left article {
+  font-family: 'Lato';
+  font-size: 16px;
+  padding: 0px 40px 36px 40px;
+  line-height: 25px;
+  word-spacing: -2px;
+  color: blue;
+}
+
+.main-left button {
+  font-family: 'Lato';
+  font-weight: 600;
+  font-size: 12px;
+  letter-spacing: 1px;
+  text-align: center;
+  padding: 11px 17px 12px 18px;
+  color: #D88462;
+  background-color: white;
+  text-transform: uppercase;
+  border: solid 1px #D88462;
+  margin-bottom: 41px;
 }
 
 .main-footer {
   border-top: solid 1px grey;
   display: flex;
   justify-content: space-between;
-  padding: 0px;
-  width: 100%;
+  padding: 0px -10px;
+  margin-bottom: 35px;
+  width: 675px;
+  /* width: 100%; */
+}
+
+.main-footer p {
+  font-family: 'Lato';
+  padding-top: 4px;
+  padding-left: 3px;
+  font-style: italic;
+  font-size: 14px;
+  color: blue;
 }
 
 .main-soical {
   list-style: none;
-  width: 25%;
+  width: 150px;
   padding: 0px;
+  padding-top: 13px;
   align-self: center;
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
 }
 
+.main-soical li {
+  margin: 0px 8px 0px 8px
+}
+
+/* ----------------------------------- */
 .side {
   display: flex;
   flex-direction: column;
   width: 25%;
+  height: 1500px;
   position: relative;
   list-style: none;
   border: solid 1px #EBEBEB;
   background-color: white;
   border-radius: 5px;
 }
-.side > * {
+
+.side>* {
   list-style: none;
 }
 
-.side-top{
+.side-top {
   width: 100%;
   height: 190px;
 }
 
-.side-profile{
+.side-profile {
   position: absolute;
   top: 100px;
   left: 50%;
   transform: translateX(-50%);
   height: 155px;
-  border: solid 5px white;
+  width: 155px;
+  border: solid 7px white;
   border-radius: 500px;
 }
 
-.side-soical li {
-  display: inline-block;
-  border: solid 1px #EBEBEB;
-  border-radius: 500px;
-  width: 10px;
-  height: 10px;
-}
-
-.side-soical li > i {
-  font-size: 1px;
-}
-
-
-h3 {
+h5 {
+  margin-left: 128px;
+  margin-top: 84px;
   font-family: 'Oswald';
+  font-size: 20px;
   font-weight: 400;
-  line-height: 20px;
-  font-size: 1.5rem;
-  margin-top: 6px;
-  letter-spacing: 1px;
-}
-/* put this in a p page */
-.p-head {
-  margin-top: 48px;
-  line-height: 12px;
-  font-family: 'Lato';
-  letter-spacing: 1px;
-  font-weight: bold;
-  font-size: .7rem;
-  color: #D88462;
 }
 
-.main-left article {
+.side-header p {
+  margin-top: -12px;
+  padding: 0px 30px 0px 27px;
+  text-align: center;
   font-family: 'Lato';
-  padding: 5px 33px 35px 39px;
   line-height: 25px;
-  color: blue;
+  font-size: 15px;
+  margin-bottom: 0px;
 }
 
-.main-left button {
-  font-family: 'Lato';
-  font-weight: bold;
-  font-size: .8rem;
-  padding: 10px 20px 10px 20px;
-  color: #D88462;
-  background-color: white;
+.side-soical {
+  padding-left: 75px;
+  margin: 0px;
+  margin-top: 25px;
+  /* margin-bottom: 100px; */
+}
+
+.side-soical>* {
+  display: inline-block;
+  padding-right: 1px;
+  margin-left: 5px;
+}
+
+.side-soical i {
+  width: 27px;
+  height: 21px;
+  text-align: center;
+  padding-top: 5px;
+  border: solid 1px red;
+  border-radius: 500px;
+  font-size: 15px;
+  color: red;
+}
+
+.pop-post {
+  padding: 0px;
+
+}
+
+.pop-post img{
+  margin-top: 13px;
+  margin-left: 28px;
+  width: 240px;
+  height: 160px;
+}
+
+.pop-post, .latest-post, .inst-post {
+  padding: 5px 0px 0px 0px;
+  border: solid 1px grey;
+  margin-left: 30px;
+  margin-top: 10px;
+  width: 300px;
+}
+
+.pop-header, .latest-header, .inst-header {
+  font-family: 'Oswald';
+  letter-spacing: 1px;
+  margin-left: -3px;
+  word-spacing: 1px;
+  margin-top: 26px;
+  font-size: 17px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.pop-post-title {
+  font-family: 'Oswald';
+  margin-left: -3px;
+  font-size: 13px;
+  text-align: center;
+  font-weight: 500;
+  letter-spacing: 1px;
   text-transform: uppercase;
-  border: solid 1px #D88462;
 }
 
-.main-footer {
-  padding: 10px;
+.pop-post-date {
+  font-family: 'Lato';
+  font-size: 14px;
+  font-style: italic;
+  text-align: center;
+  border-bottom: solid 1px grey;
+  padding-bottom: 18px;
+  margin: 0px 34px;
+  margin-bottom: 6px;
+  padding-top: 2px;
+}
+
+.pop-post-date3 {
+  font-family: 'Lato';
+  font-size: 14px;
+  font-style: italic;
+  text-align: center;
+  margin-bottom: 38px;
+  border: none;
 }
