--- a/styles.css
+++ b/styles.css
@@ -185,7 +185,7 @@ h3 {
   display: flex;
   flex-direction: column;
   width: 25%;
-  height: 1500px;
+  height: 2471px;
   position: relative;
   list-style: none;
   border: solid 1px #EBEBEB;
@@ -272,6 +272,7 @@ h5 {
   border: solid 1px grey;
   margin-left: 30px;
   margin-top: 10px;
+  margin-bottom: 28px;
   width: 300px;
 }
 
@@ -315,4 +316,138 @@ h5 {
   text-align: center;
   margin-bottom: 38px;
   border: none;
+}
+.latest-post li {
+  display: flex;
+  justify-content: flex-start;
+  margin: 0px 28px;
+}
+.latest-post1, .latest-post2, .latest-post3 {
+  border-bottom: solid 1px grey;
+}
+
+.latest-post4 {
+  margin-bottom: 10px;
+}
+
+.latest-header{
+  margin-top: 30px;
+}
+
+.latest-post-img {
+  width: 103px;
+  height: 75px;
+  margin-top: 15px;
+  margin-bottom: 16px;
+}
+
+.img1 {
+  margin-bottom: 10px;
+}
+
+.img4 {
+  margin-bottom: 35px;
+}
+
+.latest-div{
+  display: flex;
+  flex-direction: column;
+
+}
+/*
+.latest-div:first-child {
+
+} */
+.latest-post-title {
+  font-family: 'Oswald';
+  word-spacing: 1px;
+  font-size: 14px;
+  font-weight: 500;
+  text-align: center;
+  line-height: 18px;
+  padding: 0px 0px 0px 10px;
+  text-transform: uppercase;
+}
+
+.latest-post-date {
+  font-family: 'Lato';
+  font-size: 14px;
+  font-style: italic;
+  text-align: center;
+  margin-left: 10px;
+  margin-top: -5px;
+  margin-bottom: 28px;
+}
+
+.inst-header {
+  padding: 4px 82px;
+  margin-bottom: 25px;
+}
+
+.inst-post {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.inst6 {
+  margin-bottom: 10px;
+}
+.inst-post img {
+  width: 114px;
+  padding: 0px 8px 5px 5px;
+  height: 115px;
+}
+
+
+.fat-footer{
+  position: relative;
+}
+.footer-top {
+  margin-top: 31px;
+  height: 49px;
+  padding-top: 30px;
+  background-color: white;
+  font-family: 'Oswald';
+  font-size: 19px;
+  font-weight: 500;
+  text-align: center;
+}
+footer{
+  width: 100%;
+  height: 75px;
+  text-align: center;
+  font-family: 'Lato';
+  font-weight: 400;
+  font-size: 14px;
+  color: #737373;
+  background-color: #222223;
+  padding-top: 25px;
+}
+.fa-heart {
+  color: #E0726E;
+}
+
+.footer-scroll {
+  position: absolute;
+  opacity: .5;
+  width: 37px;
+  height: 78px;
+  background-color: #E0726E;
+  top: 228px;
+  border-radius: 5px;
+  right: 28px;
+}
+.fa-angle-up {
+  color: white;
+  display: flex;
+  justify-content: center;
+  margin-top: 51px;
+}
+
+.footer-images {
+  display:flex;
+  height: 188px;
+}
+.footer-images img {
+  width: 100%;
 }
