--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,10 @@ html make the font size 10px */
   padding-left: 22.5px;
   padding-bottom: 0px;
   font-weight: bold;
-  color: blue;
+}
+
+.nav-buttons li:hover {
+  opacity: .5;
 }
 
 .nav-soical {
@@ -56,6 +59,9 @@ html make the font size 10px */
   font-size: 13px;
 }
 
+.nav-soical li:hover {
+  opacity: .5;
+}
 .fa-search {
   padding-left: 10px;
 }
@@ -72,7 +78,6 @@ html make the font size 10px */
   margin-top: 50px;
 }
 
-/* main left */
 .main-left img {
   width: 100%;
   height: 472px;
@@ -109,7 +114,6 @@ h3 {
   font-size: 24px;
   margin-top: 3px;
   letter-spacing: .5px;
-  color: blue;
 }
 
 /* put this in a p page */
@@ -118,10 +122,8 @@ h3 {
   font-family: 'Lato';
   letter-spacing: 1px;
   font-weight: 700;
-  /* font-size: .7rem; 11px */
   font-size: 11px;
   color: #D88462;
-  color: blue;
 }
 
 .main-left article {
@@ -130,7 +132,7 @@ h3 {
   padding: 0px 40px 36px 40px;
   line-height: 25px;
   word-spacing: -2px;
-  color: blue;
+  color: #757575;
 }
 
 .main-left button {
@@ -147,6 +149,11 @@ h3 {
   margin-bottom: 41px;
 }
 
+button:hover {
+  background-color: #D88462;
+  color: white;
+}
+
 .main-footer {
   border-top: solid 1px grey;
   display: flex;
@@ -154,7 +161,6 @@ h3 {
   padding: 0px -10px;
   margin-bottom: 35px;
   width: 675px;
-  /* width: 100%; */
 }
 
 .main-footer p {
@@ -163,7 +169,7 @@ h3 {
   padding-left: 3px;
   font-style: italic;
   font-size: 14px;
-  color: blue;
+  color: #757575;
 }
 
 .main-soical {
@@ -173,13 +179,15 @@ h3 {
   padding-top: 13px;
   align-self: center;
   display: flex;
-  /* justify-content: space-around; */
 }
 
 .main-soical li {
   margin: 0px 8px 0px 8px
 }
 
+.main-soical li:hover {
+  opacity: .5;
+}
 /* ----------------------------------- */
 .side {
   display: flex;
@@ -249,10 +257,10 @@ h5 {
   height: 21px;
   text-align: center;
   padding-top: 5px;
-  border: solid 1px red;
+  border: solid 1px #757575;
   border-radius: 500px;
   font-size: 15px;
-  color: red;
+  color: #757575;
 }
 
 .pop-post {
@@ -269,7 +277,7 @@ h5 {
 
 .pop-post, .latest-post, .inst-post {
   padding: 5px 0px 0px 0px;
-  border: solid 1px grey;
+  border: solid 1px #757575;
   margin-left: 30px;
   margin-top: 10px;
   margin-bottom: 28px;
@@ -436,6 +444,13 @@ footer{
   top: 228px;
   border-radius: 5px;
   right: 28px;
+}
+a:link {
+  text-decoration: none;
+}
+
+.footer-scroll:hover {
+  opacity: 1;
 }
 .fa-angle-up {
   color: white;
