updated place holder photos and alt

--- a/styles.css
+++ b/styles.css
@@ -479,8 +479,11 @@ a:link {
 
 .footer-images {
   display:flex;
+
   height: 188px;
+  width: 180px;
 }
 .footer-images img {
+   
   width: 100%;
 }
